<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.zhoouon</groupId>
    <artifactId>zhoouon-samples</artifactId>
    <version>${revision}</version>

    <name>zhoouon-samples</name>
    <packaging>pom</packaging>

    <modules>
        <module>zhoouon-dependencies</module>
        <module>zhoouon-redis</module>
        <module>zhoouon-seata</module>
        <module>zhoouon-proxy</module>
        <module>zhoouon-shardingsphere</module>
        <module>zhoouon-concurrent</module>
        <module>zhoouon-lock</module>
        <module>zhoouon-minio</module>
        <module>zhoouon-starter</module>
        <module>zhoouon-netty</module>
        <module>zhoouon-webflux</module>
    </modules>

    <properties>
        <revision>2024.1.0-SNAPSHOT</revision>
        <!--SpringCloud,SpringCloud alibaba,SpringBoot 三者之间的版本关系参考 https://github.com/alibaba/spring-cloud-alibaba/wiki/%E7%89%88%E6%9C%AC%E8%AF%B4%E6%98%8E-->
        <java.version>17</java.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <springboot.version>3.2.4</springboot.version>
        <spring.cloud.version>2023.0.1</spring.cloud.version>
        <spring.cloud.alibaba.version>2022.0.0.2</spring.cloud.alibaba.version>
        <maven-flatten.version>1.5.0</maven-flatten.version>
        <spotless-maven-plugin.version>2.22.1</spotless-maven-plugin.version>
    </properties>

    <repositories>
        <repository>
            <id>alimaven</id>
            <name>aliyun maven</name>
            <url>https://maven.aliyun.com/nexus/content/repositories/central/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${springboot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring.cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.alibaba.cloud</groupId>
                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
                <version>${spring.cloud.alibaba.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.zhoouon</groupId>
                <artifactId>zhoouon-dependencies</artifactId>
                <version>${revision}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!--此插件用于格式化代码，mvn spotless:check mvn spotless:apply -->
            <!--<plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>${spotless-maven-plugin.version}</version>
                <configuration>
                    <java>
                        <eclipse>
                            &lt;!&ndash;<file>${maven.multiModuleProjectDirectory}/dev-support/dailymart_spotless_formatter.xml</file>&ndash;&gt;
                            <file>dev-support/dailymart_spotless_formatter.xml</file>
                        </eclipse>
                        <licenseHeader>
                            &lt;!&ndash;<file>${maven.multiModuleProjectDirectory}/dev-support/license-header</file>&ndash;&gt;
                            <file>dev-support/license-header</file>
                        </licenseHeader>
                    </java>
                </configuration>

                <executions>
                    <execution>
                        <goals>
                            <goal>apply</goal>
                        </goals>
                        <phase>compile</phase>
                    </execution>
                </executions>
            </plugin>-->


            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <!--<configuration>
                    <release>17</release>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </path>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>1.4.2.Final</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>-->
            </plugin>


<!--            <plugin>-->
<!--                <groupId>org.codehaus.mojo</groupId>-->
<!--                <artifactId>flatten-maven-plugin</artifactId>-->
<!--                <version>${maven-flatten.version}</version>-->
<!--                <configuration>-->
<!--                    <updatePomFile>true</updatePomFile>-->
<!--                    <flattenMode>resolveCiFriendliesOnly</flattenMode>-->
<!--                </configuration>-->
<!--                <executions>-->
<!--                    <execution>-->
<!--                        <id>flatten</id>-->
<!--                        <goals>-->
<!--                            <goal>flatten</goal>-->
<!--                        </goals>-->
<!--                        <phase>process-resources</phase>-->
<!--                    </execution>-->
<!--                    <execution>-->
<!--                        <id>flatten.clean</id>-->
<!--                        <goals>-->
<!--                            <goal>clean</goal>-->
<!--                        </goals>-->
<!--                        <phase>clean</phase>-->
<!--                    </execution>-->
<!--                </executions>-->
<!--            </plugin>-->

            <!--打包生成源码-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>package</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!--打包时跳过测试-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>

        </plugins>
    </build>

</project>
